= reflac project news

2.0.1 (2021-08-16)::
  * Solve a minor edge-case: reflac will now find and recompress
    hidden files.

2.0.0 (2020-08-07)::
  * reflac skips intermediate decompression steps, significantly
    speeding up the program and simplifying the code.
  * Removed the `--preserve` option as `flac` itself now handles it
    without special conditioning.  This is a *breaking* change, and by
    https://semver.org/[Semantic Versioning] rules, necessitates a
    major version bump, thus: reflac 2.0.0.

1.5.3 (2020-02-26)::
  * AsciiDoc implementation can be altered for manpage generation with
    `make ASCIIDOC="command..."`, defaulting to `a2x` as before.  Some
    of the manpage syntax has been altered for AsciiDoctor
    compatibility.

1.5.2 (2019-01-26)::
  * The non-verbose recursive use case of reflac has been repaired.

1.5.1 (2018-01-31)::
  * reflac now passes on the `--no-sync` and `--preserve` options to
    child processes when `--recursive` is used.

1.5 (2017-08-16)::
  * reflac has learned to preserve an embedded image in FLAC files.
    Limited to just one image for now, but should cover the most
    common case.

1.4 (2016-12-16)::
  * Add an option to preserve the file modification time.

1.3 (2016-09-25)::
  * Use the rf64 format during processing, eliminating the 4GiB
    uncompressed file size limit.  This is primarily useful for FLACs
    with lots of channels (eg, surround sound) and high sample sizes
    and rates, as the 4GiB limit isn’t otherwise likely to be hit.

1.2.3 (2016-07-10)::
  * Actually bump the script’s own version identifier.

1.2.2 (2016-07-10)::
  * The first bash in the $PATH is used instead of /bin/bash
  * Shift temporary directory creation after getopt.  reflac won’t
    leave one around anymore after ambiguous options (such as `--v`
    expanding to both `--verbose` and `--version`).

1.2.1 (2016-04-28)::
  * Remove the temporary directory also after using `--version`

1.2 (2016-04-28)::