@@ -16,9 +16,13 @@ man: reflac.1
 reflac.1: reflac.adoc
 	$(ASCIIDOC) reflac.adoc
 
+clean:
+	rm -f reflac.1
+
 install: reflac.1
 	install -Dm 755 reflac "$(target)/bin/reflac"
 	install -Dm 644 reflac.1 "$(target)$(mandir)/man1/reflac.1"
 
-clean:
-	rm -f reflac.1
+uninstall:
+	$(RM) "$(target)/bin/reflac"
+	$(RM) "$(target)$(mandir)/man1/reflac.1"
